--- a/schemas/Settings.json
+++ b/schemas/Settings.json
@@ -6,16 +6,21 @@
         "dark_mode": {
             "type": "boolean"
         },
+        "live_dashboard_update": {
+            "type": "boolean"
+        },
         "smash_gg_api_key": {
             "type": "string"
         }
     },
     "required": [
         "dark_mode",
+        "live_dashboard_update",
         "smash_gg_api_key"
     ],
     "default": {
         "dark_mode": true,
+        "live_dashboard_update": false,
         "smash_gg_api_key": ""
     }
 }
