--- a/package.json
+++ b/package.json
@@ -94,10 +94,13 @@
     ]
   },
   "dependencies": {
+    "@types/country-list": "^2.1.0",
     "buffer": "^5.6.0",
+    "country-list": "^2.2.0",
     "events": "^3.2.0",
     "stream": "0.0.2",
     "timers": "^0.1.1",
+    "uuid": "^8.3.1",
     "vue-router": "^3.4.5"
   }
 }
