--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "buffer": "^5.6.0",
     "country-list": "^2.2.0",
     "events": "^3.2.0",
+    "fitty": "^2.3.2",
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "uuid": "^8.3.1",
