--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   },
   "dependencies": {
     "@types/country-list": "^2.1.0",
+    "@types/uuid": "^8.3.0",
     "buffer": "^5.6.0",
     "country-list": "^2.2.0",
     "events": "^3.2.0",
