--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "^3.9.7",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
+    "vue-devtools": "^5.1.4",
     "vue-hot-reload-api": "^2.3.4",
     "vue-loader": "^15.9.3",
     "vue-property-decorator": "^9.0.0",
@@ -101,9 +102,9 @@
     "events": "^3.2.0",
     "file-saver": "^2.0.2",
     "fitty": "^2.3.2",
+    "pure-uuid": "^1.6.1",
     "stream": "0.0.2",
     "timers": "^0.1.1",
-    "uuid": "^8.3.1",
     "vue-router": "^3.4.5"
   }
 }
