--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   },
   "dependencies": {
     "@types/country-list": "^2.1.0",
+    "@types/file-saver": "^2.0.1",
     "@types/uuid": "^8.3.0",
     "buffer": "^5.6.0",
     "country-list": "^2.2.0",
