--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "dependencies": {
     "@types/country-list": "^2.1.0",
     "@types/file-saver": "^2.0.1",
+    "@types/semver": "^7.3.4",
     "@types/uuid": "^8.3.0",
     "buffer": "^5.6.0",
     "country-list": "^2.2.0",
@@ -105,6 +106,7 @@
     "file-saver": "^2.0.2",
     "fitty": "^2.3.2",
     "pure-uuid": "^1.6.1",
+    "semver": "^7.3.2",
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "vue-router": "^3.4.5"
