--- a/package.json
+++ b/package.json
@@ -101,10 +101,12 @@
     "@types/semver": "^7.3.4",
     "@types/uuid": "^8.3.0",
     "buffer": "^5.6.0",
+    "cjk-regex": "^2.0.0",
     "country-list": "^2.2.0",
     "events": "^3.2.0",
     "file-saver": "^2.0.2",
     "fitty": "^2.3.2",
+    "i18n-iso-countries": "^6.1.0",
     "pure-uuid": "^1.6.1",
     "semver": "^7.3.2",
     "stream": "0.0.2",
