--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/semver": "^7.3.4",
     "@types/uuid": "^8.3.0",
+    "@types/vfile-message": "^2.0.0",
     "buffer": "^5.6.0",
     "cjk-regex": "^2.0.0",
     "country-list": "^2.2.0",
