--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -22,7 +22,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-          repository: opeik electroncg
+          repository: opeik/electroncg
           submodules: true
 
       # Runs a single command using the runners shell
