--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -17,21 +17,29 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Clone electroncg
+        uses: actions/checkout@v2
         with:
           repository: opeik/electroncg
 
-      - uses: actions/checkout@v2
+      - name: Clone runback
+        uses: actions/checkout@v2
         with:
           repository: opeik/runback
           path: bundles/runback
 
+      - name: Cache packages
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Install dependencies
-        run: npm install && npm install -g electron-builder && \ 
-          cd bundles/runback && npm install && git submodule update --init --recursive
+        run: yarn install && yarn install electron-builder && \ 
+          cd bundles/runback && yarn install && git submodule update --init --recursive
 
       - name: Build runback
         run: cd bundles/runback && npm run-script build
 
-      - name: Build electroncg
+      - name: Create binary
         run: yarn dist
