--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         run: npm install && npm install electron-builder &&
