--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -40,8 +40,11 @@ jobs:
 
       - name: Build runback
         run: cd bundles/runback && npm run-script build
-
+      - name: Electron Builder Action
+   
       - name: Create binary
-        run: yarn dist
-        env:
-          GH_TOKEN: ${{ secrets.ELECTRON_BUILDER_PAT }}
+        uses: samuelmeuli/action-electron-builder@v1.6.0
+        with:
+          github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          build_script_name: dist
