--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -40,9 +40,8 @@ jobs:
 
       - name: Build runback
         run: cd bundles/runback && npm run-script build
-      - name: Electron Builder Action
    
-      - name: Create binary
+      - name: Create and publish binary
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
           github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
