--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -4,9 +4,9 @@ name: Dist
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
@@ -31,7 +31,7 @@ jobs:
       - name: Cache packages
         uses: actions/cache@v2
         with:
-          path: '**/node_modules'
+          path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
@@ -40,10 +40,10 @@ jobs:
 
       - name: Build runback
         run: cd bundles/runback && npm run-script build
-   
+
       - name: Create and publish binary
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
           github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          build_script_name: dist
+          build_script_name: release
