Update build system

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runback",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "description": "Broadcast graphics for fighting games",
   "homepage": "https://github.com/opeik/runback",
   "bugs": {
@@ -12,6 +12,36 @@
   },
   "license": "ISC",
   "author": "opeik",
+  "build": {
+    "appId": "me.stikic.runback",
+    "productName": "Runback",
+    "directories": {
+      "output": "release",
+      "buildResources": "electron-builder"
+    },
+    "asar": false
+  },
+  "files": [
+    "../../build",
+    "../../bundles/*",
+    "../../db/.empty_directory",
+    "../../lib",
+    "../../schemas",
+    "../../src",
+    "../../types",
+    "!../../release/*",
+    "!../../**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+    "!../../**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+    "!../../**/node_modules/*.d.ts",
+    "!../../**/node_modules/.bin",
+    "!../../**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+    "!../../.editorconfig",
+    "!../../**/._*",
+    "!../../**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+    "!../../**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+    "!../../**/{appveyor.yml,.travis.yml,circle.yml}",
+    "!../../**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+  ],
   "scripts": {
     "autofix": "run-s autofix:*",
     "autofix:browser": "eslint --fix --ext .ts,.vue src/dashboard && eslint --fix --ext .ts,.vue src/graphics && eslint --fix --ext .ts src/browser_shared",
@@ -25,7 +55,10 @@
     "typeschemas": "node script/typeschemas.js",
     "watch": "run-p watch:*",
     "watch:browser": "webpack -w",
-    "watch:extension": "tsc -b tsconfig.extension.json -w"
+    "watch:extension": "tsc -b tsconfig.extension.json -w",
+    "release": "electron-builder",
+    "postinstall": "electron-builder install-app-deps",
+    "prepare-release": "./electron-builder/prepare-release.sh"
   },
   "devDependencies": {
     "@mdi/font": "^5.4.55",
@@ -38,6 +71,8 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.0",
     "deepmerge": "^4.2.2",
+    "electron": "^10.1.3",
+    "electron-builder": "^22.9.1",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -76,7 +111,7 @@
     "webpack-livereload-plugin": "^2.3.0"
   },
   "nodecg": {
-    "compatibleRange": "^0.1.0",
+    "compatibleRange": "^1.6.0",
     "dashboardPanels": [
       {
         "name": "runback",
