--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -16,12 +16,6 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
-    steps:
-      - name: Clone electroncg
-        uses: actions/checkout@v2
-        with:
-          repository: opeik/electroncg
-
       - name: Clone runback
         uses: actions/checkout@v2
         with:
@@ -35,11 +29,10 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        run: npm install && npm install electron-builder &&
-          cd bundles/runback && npm install && git submodule update --init --recursive
+        run: npm install && git submodule update --init --recursive
 
       - name: Build runback
-        run: cd bundles/runback && npm run-script build
+        run: npm run-script build && npm run-script prepare-release
 
       - name: Create and publish binary
         uses: samuelmeuli/action-electron-builder@v1.6.0
