Fix build system

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/graphics/scoreboard/region-flags"]
 	path = src/graphics/scoreboard/img/region-flags
 	url = https://github.com/google/region-flags
+[submodule "lib/nodecg"]
+	path = lib/nodecg
+	url = https://github.com/nodecg/nodecg
