Tweak build order

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "src/graphics/scoreboard/region-flags"]
-	path = src/graphics/scoreboard/img/region-flags
-	url = https://github.com/google/region-flags
+path = src/graphics/scoreboard/img/region-flags
+url = https://github.com/google/region-flags
 [submodule "lib/nodecg"]
-	path = lib/nodecg
-	url = https://github.com/nodecg/nodecg
+path = lib/nodecg
+url = https://github.com/nodecg/nodecg
+ignore = dirty
