--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -28,6 +28,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install && git submodule update --init --recursive && cd lib/nodecg && npm install
+ 
+      - if: matrix.os == 'ubuntu-latest'
+        name: Install snapcraft
+        run: |
+          sudo snap install snapcraft --classic 
 
       - name: Build runback
         run: npm run-script build
