Update build scripts

--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -27,12 +27,12 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        run: npm install && git submodule update --init --recursive && cd lib/nodecg && npm install
- 
+        run: npm install
+
       - if: matrix.os == 'ubuntu-latest'
         name: Install snapcraft
         run: |
-          sudo snap install snapcraft --classic 
+          sudo snap install snapcraft --classic
 
       - name: Build runback
         run: npm run-script build
