--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Check out Runback
         uses: actions/checkout@v1
+        with:
+          submodules: true
 
       - name: Cache packages
         uses: actions/cache@v2
@@ -27,7 +29,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        run: npm install && rm -rf {lib/*,build} && git submodule update --init --recursive && cd lib/nodecg && npm install
+        run: npm install && cd lib/nodecg && npm install && cd build/nodecg && npm install && cd bundles/runback && npm install
 
       - name: Build runback
         run: npm run-script build
