--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "watch": "run-p watch:*",
     "watch:browser": "webpack -w",
     "watch:extension": "tsc -b tsconfig.extension.json -w",
-    "release": "./electron-builder/prepare-release.sh && electron-builder install-app-deps && electron-builder"
+    "dist": "electron-builder",
+    "release": "electron-builder"
   },
   "devDependencies": {
     "@mdi/font": "^5.4.55",
