--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -28,8 +28,20 @@ jobs:
           path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
-        run: npm install && cd lib/nodecg && npm install && cd build/nodecg && npm install && cd bundles/runback && npm install
+      - name: Install runback dependencies
+        run: npm install
+
+      - name: Install nodecg dependencies
+        working-directory: lib/nodecg
+        run: npm install
+
+      - name: Install nodecg build dependencies
+        working-directory: build/nodecg
+        run: npm install
+
+      - name: Install runback build dependencies
+        working-directory: build/nodecg/bundles/runback
+        run: npm install
 
       - name: Build runback
         run: npm run-script build
