--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -14,7 +14,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        include:
+          - os: macos-latest
+            USE_HARD_LINKS: false
+
+          - os: ubuntu-latest
+            USE_HARD_LINKS: false
+
+          - os: windows-latest
 
     steps:
       - name: Check out Runback
@@ -52,5 +59,3 @@ jobs:
           github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           build_script_name: release
-        env:
-          USE_HARD_LINKS: false
