--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Dist
+name: Release
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -22,6 +22,7 @@ jobs:
             USE_HARD_LINKS: false
 
           - os: windows-latest
+            USE_HARD_LINKS: true
 
     steps:
       - name: Check out Runback
@@ -59,3 +60,5 @@ jobs:
           github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           build_script_name: release
+        env:
+          USE_HARD_LINKS: ${{matrix.USE_HARD_LINKS}}
