--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,15 @@ jobs:
           submodules: true
 
       - name: Cache packages
+        if: matrix.os != 'windows-latest'
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          
+      - name: Clear npm cache on Windows
+        if: matrix.os == 'windows-latest'
+        run: npm cache clean --force
 
       - name: Install runback dependencies
         run: npm install
