Update build targets

--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     },
     "win": {
       "target": [
-        "nsis",
-        "portable",
-        "appx"
+        "nsis"
       ]
     },
     "asar": false
