--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "build:browser": "cross-env NODE_ENV=production webpack",
     "build:extension": "tsc -b tsconfig.extension.json",
     "clean": "trash node_modules/.cache && trash dashboard && trash graphics && trash extension",
-    "start": "electron ../..",
+    "start": "electron build/nodecg",
     "typeschemas": "node script/typeschemas.js",
     "watch": "run-p watch:*",
     "watch:browser": "webpack -w",
