--- a/tsconfig.extension.json
+++ b/tsconfig.extension.json
@@ -42,13 +42,13 @@
             "*": [
                 "node_modules/*",
                 "types/*",
-                "*"
+                "*",
             ],
             "nodecg/*": [
                 "lib/nodecg/*"
             ],
-            "Runback/*": [
-                "src/dashboard/runback/*"
+            "src/*": [
+                "src/*"
             ],
         }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
