--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,11 +41,9 @@ jobs:
       - name: Prepare electron build
         run: bash ./electron-builder/prepare-build.sh
 
-      - name: Create electron binary
-        uses: samuelmeuli/action-electron-builder@v1.6.0
-        with:
-          github_token: ${{ secrets.ELECTRON_BUILDER_PAT }}
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          build_script_name: release
+      - name: Build electron
+        run: yarn release
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         env:
           USE_HARD_LINKS: false
+          GH_TOKEN: ${{ secrets.ELECTRON_BUILDER_PAT }}
