--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
   "scripts": {
     "autofix": "run-s autofix:*",
     "autofix:browser": "eslint --fix --ext .ts,.vue src/dashboard && eslint --fix --ext .ts,.vue src/graphics && eslint --fix --ext .ts src/browser_shared",
-    "autofix:extension": "eslint --fix --ext .ts src/extension",
+    "autofix:server": "eslint --fix --ext .ts src/server",
     "autofix:types": "eslint --fix --ext .d.ts types",
     "build": "run-s build:*",
     "build:browser": "cross-env NODE_ENV=production webpack",
-    "build:extension": "tsc -b tsconfig.extension.json",
-    "clean": "trash node_modules/.cache && trash dashboard && trash graphics && trash extension",
+    "build:server": "tsc -b tsconfig.server.json",
+    "clean": "trash node_modules/.cache && trash dashboard && trash graphics && trash server",
     "typeschemas": "node script/typeschemas.js",
     "watch": "run-p watch:*",
     "watch:browser": "webpack -w",
-    "watch:extension": "tsc -b tsconfig.extension.json -w"
+    "watch:server": "tsc -b tsconfig.server.json -w"
   },
   "devDependencies": {
     "@mdi/font": "^5.4.55",
     "@types/clone": "^0.1.30",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.14.11",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "@vue/component-compiler-utils": "^3.2.0",
@@ -74,24 +74,6 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-livereload-plugin": "^2.3.0"
-  },
-  "nodecg": {
-    "compatibleRange": "^1.7.2",
-    "dashboardPanels": [
-      {
-        "name": "runback",
-        "title": "Runback",
-        "file": "runback.html",
-        "fullbleed": true
-      }
-    ],
-    "graphics": [
-      {
-        "file": "scoreboard.html",
-        "width": 1920,
-        "height": 1080
-      }
-    ]
   },
   "dependencies": {
     "@types/country-list": "^2.1.0",
