--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -44,9 +44,6 @@
                 "types/*",
                 "*",
             ],
-            "nodecg/*": [
-                "../../*"
-            ],
             "src/*": [
                 "src/*"
             ],
@@ -57,7 +54,8 @@
             "./node_modules/vuetify/types"
         ] /* List of folders to include type definitions from. */,
         "types": [
-            "vuetify"
+            "vuetify",
+            "node"
         ] /* Type declaration files to be included in compilation. */,
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
