--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,8 +12,8 @@
         // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
-        "outDir": "extension", /* Redirect output structure to the directory. */
-        "rootDir": "src/extension", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "outDir": "server", /* Redirect output structure to the directory. */
+        "rootDir": "src/server", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         // "composite": true,                     /* Enable project compilation */
         // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
         // "removeComments": true,                /* Do not emit comments to output. */
@@ -44,16 +44,15 @@
                 "types/*",
                 "*",
             ],
-            "nodecg/*": [
-                "../../*"
-            ],
             "src/*": [
                 "src/*"
             ],
         }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
         // "typeRoots": [],                       /* List of folders to include type definitions from. */
-        // "types": [],                           /* Type declaration files to be included in compilation. */
+        "types": [
+            "node"
+        ], /* Type declaration files to be included in compilation. */
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
@@ -68,6 +67,6 @@
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
     "include": [
-        "src/extension/**/*.ts"
+        "src/server/**/*.ts"
     ]
 }
