Add commentator graphic

--- a/package.json
+++ b/package.json
@@ -90,6 +90,11 @@
         "file": "scoreboard.html",
         "width": 1920,
         "height": 1080
+      },
+      {
+        "file": "commentary.html",
+        "width": 1920,
+        "height": 1080
       }
     ]
   },
