--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   "dependencies": {
     "@types/country-list": "^2.1.0",
     "@types/file-saver": "^2.0.1",
+    "@types/got": "^9.6.11",
     "@types/semver": "^7.3.4",
     "@types/uuid": "^8.3.0",
     "@types/vfile-message": "^2.0.0",
@@ -110,6 +111,7 @@
     "events": "^3.2.0",
     "file-saver": "^2.0.2",
     "fitty": "^2.3.2",
+    "got": "^11.8.1",
     "i18n-iso-countries": "^6.1.0",
     "pure-uuid": "^1.6.1",
     "semver": "^7.3.2",
