--- a/tsconfig.extension.json
+++ b/tsconfig.extension.json
@@ -13,7 +13,7 @@
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "extension", /* Redirect output structure to the directory. */
-        "rootDir": "src/extension", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        // "rootDir": "src/extension", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         // "composite": true,                     /* Enable project compilation */
         // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
         // "removeComments": true,                /* Do not emit comments to output. */
@@ -55,8 +55,8 @@
         // "typeRoots": [],                       /* List of folders to include type definitions from. */
         // "types": [],                           /* Type declaration files to be included in compilation. */
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-        "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-        // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
+        "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+        "preserveSymlinks": true, /* Do not resolve the real path of symlinks. */
         // "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
         /* Source Map Options */
         // "sourceRoot": "",                      /* Specify the location where debugger should locate TypeScript files instead of source locations. */
