--- a/package.json
+++ b/package.json
@@ -113,10 +113,13 @@
     "fitty": "^2.3.2",
     "got": "^11.8.1",
     "i18n-iso-countries": "^6.1.0",
+    "kuroshiro": "^1.1.2",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "pure-uuid": "^1.6.1",
     "semver": "^7.3.2",
     "stream": "0.0.2",
     "timers": "^0.1.1",
+    "transliteration": "^2.2.0",
     "vue-router": "^3.4.5"
   }
 }
