--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/semver": "^7.3.4",
     "@types/uuid": "^8.3.0",
     "@types/vfile-message": "^2.0.0",
+    "@types/xregexp": "^4.3.0",
     "buffer": "^5.6.0",
     "cjk-regex": "^2.0.0",
     "country-list": "^2.2.0",
@@ -120,6 +121,7 @@
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "transliteration": "^2.2.0",
-    "vue-router": "^3.4.5"
+    "vue-router": "^3.4.5",
+    "xregexp": "^4.4.1"
   }
 }
