--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,9 +57,11 @@ jobs:
 
       - name: Install json
         run: yarn global add json
+        shell: bash
 
       - name: Set package version
         run: json "version" -f lib/nodecg/bundles/runback/package.json | xargs -I '{}' json -I -f package.json -e 'this.version="{}"'
+        shell: bash
 
       - name: Build runback
         run: yarn build
