--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,9 @@ jobs:
         shell: bash
 
       - name: Set package version
-        run: json "version" -f lib/nodecg/bundles/runback/package.json | xargs -I '{}' json -I -f package.json -e 'this.version="{}"'
+        run: yarn global add json && \
+          json "version" -f lib/nodecg/bundles/runback/package.json | \
+          xargs -I '{}' json -I -f package.json -e 'this.version="{}"'
         shell: bash
 
       - name: Build runback
