--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           repository: opeik/runback-electron
           submodules: true
+          token: ${{ secrets.PAT }}
 
       - name: Check out nodecg
         uses: actions/checkout@v2
@@ -30,6 +31,10 @@ jobs:
           path: lib/nodecg
           ref: legacy-1.x
           submodules: true
+          token: ${{ secrets.PAT }}
+
+      - name: fug
+        run: ls -al lib/nodecg/bundles
 
       - name: Check out runback
         uses: actions/checkout@v2
@@ -37,6 +42,7 @@ jobs:
           repository: opeik/runback
           path: lib/nodecg/bundles/runback
           submodules: true
+          token: ${{ secrets.PAT }}
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -56,12 +62,10 @@ jobs:
         working-directory: lib/nodecg/bundles/runback
 
       - name: Install json
-        run: yarn global add json
-        shell: bash
+        run: npm install json --global
 
       - name: Set package version
-        run: yarn global add json && \
-          json "version" -f lib/nodecg/bundles/runback/package.json | \
+        run: json "version" -f lib/nodecg/bundles/runback/package.json | \
           xargs -I '{}' json -I -f package.json -e 'this.version="{}"'
         shell: bash
 
@@ -73,4 +77,4 @@ jobs:
         run: yarn dist
         env:
           USE_HARD_LINKS: false
-          GH_TOKEN: ${{ secrets.ELECTRON_BUILDER_PAT }}
+          GH_TOKEN: ${{ secrets.PAT }}
