--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
         working-directory: lib/nodecg/bundles/runback
 
       - name: Install json
-        run: npm install json --global
+        run: sudo npm install -g json
 
       - name: Set package version
         run: json "version" -f lib/nodecg/bundles/runback/package.json | \
